<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.hta.GraphFragment"
        android:label="@string/tab_graph"
        tools:layout="@layout/fragment_graph" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.hta.InputFragment"
        android:label="@string/tab_input"
        tools:layout="@layout/fragment_input" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.hta.SettingsFragment"
        android:label="@string/tab_notifications"
        tools:layout="@layout/fragment_settings" />
</navigation>
